<resources>
    <string name="app_name">gamenight</string>
    <string name="placeholder_datum">datum</string>
    <string name="pregled_dogodkov">Pregled dogodkov</string>
    <string name="xml_danasnji_datum">Današnji datum</string>
    <string name="pregled_iger">Pregled iger</string>
    <string name="navodilo">Navodilo</string>
    <string name="pozdrav">Pozdravljeni</string>
    <string name="dummy">dummy</string>
    <string name="zgodovina_ni_vnosov">ni vnosov</string>
    <string name="igra">igra</string>
    <string name="dodaj_igro">Dodaj igro</string>
    <string name="igra_podatki_ime">\"Ime igre: \"</string>
    <string name="igra_podatki_ocena">\"Ocena: \"</string>
    <string name="igra_podatki_min_igr">Minimalno število igralcev:</string>
    <string name="igra_podatki_max_igr">Maksimalno število igralcev:</string>
    <string name="igra_podatki_tezavnost">Težavnost:</string>
    <string name="igra_podatki_slika_url">\"Dolžina igre: \"</string>
    <string name="problem_dogodki_pregled">Problem</string>
    <string name="dodaj_dogodek_ime_skupine">Ime skupine</string>
    <string name="dodaj_dogodekdatum">Datum</string>
    <string name="dodaj_dogodek_zmagovalec">Zmagovalec</string>
    <string name="dodaj_dogodek_gumb">Dodaj dogodek</string>
    <string name="dodaj_ime_igre">Ime Igre</string>
    <string name="dodaj_ocena">Ocena</string>
    <string name="dodaj_tezavnost">Težavnost</string>
    <string name="dodaj_minimalno_st_igralcev">Minimalno št. igralcev</string>
    <string name="dodaj_maksimalno_t_igralcev">Maksimalno št. igralcev</string>
    <string name="dodaj_dolzina_igre">Dolžina igre</string>
    <string name="dodaj_slika_url">slika_url</string>
    <string name="dogodki">Dogodki</string>
    <string name="dodaj">Dodaj</string>
    <string name="igre">Igre</string>
    <string name="dodaj_igro_gumb">Dodaj igro</string>
    <string name="pozdrav_main">Pozdravljeni, dobrodošli v aplikaciji Gamenight.</string>
    <string name="main_navodilo">V aplikaciji je na voljo pregled iger, dogodkov in predlagalnik, ki vam predlaga eno izmed vaših dodanih iger.</string>
    <string name="predlagalnik">Predlagalnik</string>
    <string name="odjava">Odjava</string>
    <string name="test_ime">test ime</string>
    <string name="test_datum">test datum</string>
    <string name="test_igra">test igra</string>
    <string name="test_zmagovalec">test zmagovalec</string>
    <string name="ime">ime</string>
    <string name="prijava_pozdrav">Pozdravljeni na Gamenight aplikaciji. Prosim vpišite se z uporabniškim imenom in geslom.</string>
    <string name="uporabni_ko_ime">Uporabniško ime</string>
    <string name="geslo">Geslo</string>
    <string name="prijava">Prijava</string>
    <string name="register_iz_prijave">Če si že registriran se lahko prijaviš.</string>
    <string name="prijava_registracija">Registracija</string>
    <string name="predlagalnik_igre">Predlagalnik igre</string>
    <string name="predlagaj_igro">Pritisni gumb za predlaganje igre</string>
    <string name="predlagaj_gumb">Predlagaj igro</string>
    <string name="ni_igre">Predlagana igra: Ni predlagane igre</string>
    <string name="kockomet">Kockomet</string>
    <string name="pritisni_na_gumb_za_met_kocke">Pritisni na gumb za met kocke.</string>
    <string name="vrzi_kocko">Vrzi kocko</string>
    <string name="met">0</string>
    <string name="pozdrav_registracija">Pozdravljeni na obrazcu za registracijo</string>
    <string name="vnesite_ime">Vnesite ime</string>
    <string name="vnesite_priimek">Vnesite priimek</string>
    <string name="vnesite_email">Vnesite email</string>
    <string name="vnesite_uporabni_ko_ime">Vnesite uporabniško ime</string>
    <string name="vnesite_geslo">Vnesite geslo</string>
    <string name="ponovite_geslo">Ponovite geslo</string>
    <string name="registracija">Registracija</string>
    <string name="registracija_prijava">Če si že registriran se lahko prijaviš.</string>
    <string name="nazaj_na_prijavo">Nazaj na prijavo</string>
    <string name="niskupine">ni skupine</string>
    <string name="nidatuma">ni datuma</string>
</resources>