<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/ozadjemain"
    android:layout_gravity="center_horizontal">

    <EditText
        android:id="@+id/ime_igre"
        android:inputType="text"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dodaj_ime_igre" />

    <EditText
        android:id="@+id/ocena"
        android:inputType="text"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dodaj_ocena" />

    <EditText
        android:id="@+id/tezavnost"
        android:inputType="text"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dodaj_tezavnost" />

    <EditText
        android:id="@+id/min_stevilo_igralcev"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/dodaj_minimalno_st_igralcev" />
    <EditText
        android:id="@+id/max_stevilo_igralcev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="number"
        android:hint="@string/dodaj_maksimalno_t_igralcev" />
    <EditText
        android:id="@+id/dolzina_igre"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/dodaj_dolzina_igre" />
    <EditText
        android:id="@+id/slika_url"
        android:layout_width="match_parent"
        android:inputType="textUri"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/dodaj_slika_url" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
       >
        <Button
            android:id="@+id/button_dodaj_igro"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:text="@string/dodaj_igro"/>
    </LinearLayout>
</LinearLayout>