<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ozadjemain"
    android:layout_gravity="center">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="2"
       android:orientation="vertical"
       android:gravity="center"
       android:background="@drawable/ozadje2"
      >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="20sp"
           android:id="@+id/pozdrav"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:paddingTop="20dp"
           android:text="@string/pozdrav_main"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="13sp"
           android:textStyle="bold"
           android:textColor="@color/white"
           android:id="@+id/navodilo"
           android:gravity="center"
           android:layout_margin="20dp"
           android:text="@string/main_navodilo"
           />

   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
    >
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/pregled_iger"
            android:id="@+id/preglediger"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="odpriIgre"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/pregled_dogodkov"
            android:id="@+id/novVnos"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="odpriDogodki"
            android:backgroundTint="@color/cardview_dark_background"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/predlagalnik"
            android:id="@+id/predlagalnik"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="pojdiPredlagalnik"
            android:backgroundTint="@color/cardview_dark_background"

            tools:ignore="UsingOnClickInXml" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_danasnji_datum"
            android:gravity="center"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_datum"
            android:id="@+id/profil_datum"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/odjava"
            android:id="@+id/odjava"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="odjava"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</LinearLayout>
