<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/border"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15sp"
        android:textStyle="bold"
android:gravity="center_horizontal"
        android:text="@string/test_ime"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/datum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="13sp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/test_datum" />
    <TextView
        android:id="@+id/odigrana_igra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:layout_weight="1"
        android:text="@string/test_igra" />
    <TextView
        android:id="@+id/zmagovalec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:layout_weight="1"
        android:text="@string/test_zmagovalec" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


</LinearLayout>