<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ozadjemain"
    android:layout_gravity="center_horizontal">

    <EditText
        android:id="@+id/ime_skupine"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/dodaj_dogodek_ime_skupine" />

    <EditText
        android:id="@+id/datum"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/dodaj_dogodekdatum" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>
    <EditText
        android:id="@+id/zmagovalec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="20dp"
        android:hint="@string/dodaj_dogodek_zmagovalec" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:onClick="dodajDogodek"
            android:text="@string/dodaj_dogodek_gumb"/>


    </LinearLayout>
</LinearLayout>